# fastsim

./: .gitignore  404.html  CNAME  COMMERCIAL.md  Cargo.toml  LICENSE  README.md  block_cards.json  datenschutz.html  features.json  impressum.html  index.html  landscape.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
_app/: version.json
_app/immutable/assets/: 0.BR_SrVaR.css  2.m5L5aDTQ.css  3.oy9Qjhnc.css  4.CQ1zMqTF.css  Icon.BnehBd6Q.css  config.DIJKJuz7.css
_app/immutable/chunks/: BIx-yUa6.js  BepgOwU-.js  C9GUEExa.js  CCNUu0lH.js  CDf0Dw2P.js  CRo9MzCJ.js  C_zzwPAZ.js  CoAa2Lqr.js  DEYv34PZ.js  DQVX7Kds.js  DWvdnCZS.js  DoSq5-Ta.js  Dy0FSmwi.js  GEMKcbGv.js  PfyYpPQ1.js  Q7DO4pgq.js  YOY68_Fy.js  bmWaKKJm.js
_app/immutable/entry/: app.B4L87YJ2.js  app.D2F57C7e.js  app.DHsOFNfb.js  app.DoVHDsu1.js  app.jqAyuMIT.js  start.BjvtpYQm.js  start.D-OTQHpI.js  start.Da4MntP8.js  start.YcCGP77m.js  start.v5xwADEx.js
_app/immutable/nodes/: 0.VXan3XsY.js  (+20 more)
benches/: event_loop.rs  jit_tape_micro.rs  lstsq_micro.rs  newton_cache.rs  ops_tape_vs_native.rs  sim_tape_vs_native.rs  sparse_jacobian_system.rs  statespace_matvec.rs  stiff_compiled.rs  stiff_sparse.rs  stiff_statespace.rs
doc/: codegen.md  codegen_block_inventory.md
editor/: codegen.html  index.html  robots.txt  sitemap.xml
editor/app/: version.json
examples/: bench_dense_events.rs  profile_lorenz.rs
python/examples/: codegen_smoke.py
python/fastsim/: __init__.py  adapter.py  connection.py  exceptions.py  ir.py  port.py  random.py  simulation.py  subsystem.py
scripts/: build_pyodide.sh
simple/: index.html
simple/fastsim/: index.html
src/: README.md  connection.rs  constants.rs  error.rs  lib.rs  simulation.rs  subsystem.rs
src/blocks/: README.md  block.rs  blockops.rs  fmu.rs  mod.rs  operator.rs
src/codegen/: mod.rs  solver.rs  system.rs  templates.rs  verify.rs
src/compile/: flatten.rs  mod.rs  runtime.rs  splice.rs
src/events/: README.md  condition.rs  event.rs  eventtype.rs  impls.rs  mod.rs  schedule.rs  zerocrossing.rs
src/fmi/: README.md  bindings.rs  callbacks.rs  instance.rs  mod.rs  model_description.rs  platform.rs  unzip.rs
src/ir/: README.md  builder.rs  eval.rs  mod.rs  schema.rs
src/optim/: README.md  anderson.rs  booster.rs  colloc_bvp.rs  linsolve.rs  mod.rs
src/pybindings/: README.md  mod.rs
src/solvers/: README.md  bdf.rs  dense.rs  factories.rs  mod.rs  pss.rs  solver.rs  stage.rs  tableaus.rs
src/ssa/: autodiff.rs  build.rs  graph.rs  mod.rs  op.rs  optimize.rs  tape.rs
src/tracer/: README.md  mod.rs  ndshape.rs  ufunc_table.rs
src/utils/: README.md  diagnostics.rs  fastcell.rs  feedthrough_loops.rs  gilbert.rs  logger.rs  mod.rs  numerical.rs  portreference.rs  register.rs  rng.rs  scc.rs  schedule.rs  sink.rs
tests/: codegen_op_coverage.rs  codegen_sentinel.rs  codegen_verify_c.rs  codegen_verify_system.rs  fmi_block_integration.rs  fmi_cs_integration.rs  fmi_directional_derivatives.rs  fmi_me_integration.rs  fmi_reference_fmus.rs  fmi_simulation.rs  fmu_export.rs  test_algebraic_loop.rs  test_dae_systems.rs  test_eval_systems.rs  test_event_systems.rs  test_integration_systems.rs  test_ir_golden.rs  test_pss_systems.rs  verify_c_api.rs
tests/common/: mod.rs
tests/golden/: full.json  loop.json  subsystem.json
tests/python/: codegen_common.py  conftest.py  test_adapter_pathsim_chem.py  test_algebraic_constraint.py  test_algebraic_system.py  test_api_consistency_system.py  test_block_registration_system.py  test_bouncingball_energy_system.py  test_bouncingball_friction_event_system.py  test_bouncingball_system.py  test_brusselator_system.py  test_bvp1d.py  test_codegen_a2l.py  test_codegen_block_coverage.py  test_codegen_clang_matrix.py  test_codegen_fixed.py  test_codegen_flat_events.py  test_codegen_matrix.py  test_codegen_scaffold.py  test_codegen_trace.py  test_codegen_wasm_matrix.py  test_counter_comparator_system.py  test_diagnostics_system.py  test_discrete_blocks_system.py  test_dynamical_system_ivp.py  test_error_handling_system.py  test_facade_attrs.py  test_fail_open_system.py  test_fitzhughnagumo_system.py  test_fmu_system.py  test_fully_implicit_dae_system.py  test_gear52a_solver.py  test_gil_release.py  test_harmonic_oscillator_system.py  test_ir_export_system.py  test_jit_array_ops.py  test_jit_composite_ufuncs.py  test_jit_new_ops.py  test_jit_random.py  test_jit_reduce.py  (+39 more)
wheels/: fastsim-0.22.0-cp313-cp313-pyemscripten_2025_0_wasm32.whl  fastsim-0.23.0-cp313-cp313-pyemscripten_2025_0_wasm32.whl
(+90 files in other folders)
